fix: fix swagger openapi docs